--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f6f6f6;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	height:100vh;
+}
+
+.main{
+  width:450px;
+	mrgin-top:70px;
+	display:inline-block;
+	
+	
+
+}
+form{
+	display:flex;
+	width:300px;
+	background:white;
+	padding:20px;
+	border-radius:5px;
+	box-shadow:0 0 10px #ccc;
+	flex-directions:column;
+	gap:10px;
+}
+
+
+
+
+
+
+
