--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body{
 }
 
 .main{
-  width:450px;
+    width:450px;
 	mrgin-top:70px;
 	display:inline-block;
 	
@@ -25,7 +25,25 @@ form{
 	flex-directions:column;
 	gap:10px;
 }
-
+input{
+	border:1px solid #ccc;
+	border-radius: 5px;
+	padding: 10px ;
+}
+#button{
+	background-color: #1877f2;
+	border-radius:5px;
+	padding :10px 20px;
+	border:none;
+}
+a{
+	text:underline;
+	color:#1877f2;
+	
+};
+.signup{
+	background:42b72a;
+}
 
 
 
