--- a/styles.css
+++ b/styles.css
@@ -16,34 +16,56 @@ body{
 
 }
 form{
+	
 	background:rgb(255, 255, 255);
-	display:flex;
 	width:300px;
+	height:300px;
 	background:white;
 	padding:20px;
 	border-radius:5px;
 	box-shadow:0 0 10px #ccc;
 	flex-directions:column;
 	gap:10px;
+	
 }
 input{
 	border:1px solid #ccc;
 	border-radius: 5px;
 	padding: 10px ;
+	margin:10px;
 }
 #button{
 	background-color: #1877f2;
 	border-radius:5px;
-	padding :10px 20px;
+	padding :10px;
 	border:none;
+	margin:10px;
+	color:white;
+	display:flex;
+	
 }
 a{
 	text:underline;
 	color:#1877f2;
+	margin:10px;
 	
-};
+}
 .signup{
-	background:42b72a;
+	background:#42b72a;
+	display:flex;
+	color:white;
+	border:none;
+	border-radius:5px;
+	padding:5px;
+	margin:10px;
+}
+#email,#password{
+	justify-content:center;
+	margin:10px;
+	display:flex;
+	
+	border-radius:5px;
+	padding:5px;
 }
 
 
